formulário de criar projeto

--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container margin-header">
+<div class="container padding-header padding-footer">
     <router-outlet></router-outlet>
 </div>
 
