--- a/chronos-frontend/src/assets/scss/_helpers.scss
+++ b/chronos-frontend/src/assets/scss/_helpers.scss
@@ -9,3 +9,11 @@ footer.page-footer .footer-copyright {
 .margin-header {
     margin-top: 75px;
 }
+
+.padding-header {
+    padding-top: 75px;
+}
+
+.padding-footer {
+    padding-bottom: 75px;
+}
