--- a/chronos-frontend/src/app/application/projetos/projetos.component.html
+++ b/chronos-frontend/src/app/application/projetos/projetos.component.html
@@ -3,10 +3,26 @@
   <!-- MASTER -->
   <div class="col-md-4 mb-5">
 
+    <p>
+      Seus projetos:
+    </p>
+
+    <hr />
+
     <div class="card">
-      <ul class="list-group list-group-flush" *ngFor="let projeto of projetosList | async as list">
-        <li class="list-group-item hand-over" [class.active]="isProjetoSelecionado(projeto)"
-          (click)="onClickProjeto(projeto)">{{projeto.titulo}}</li>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item hand-over" *ngFor="let projeto of projetosList | async as list"
+          [class.active]="isProjetoSelecionado(projeto)" (click)="onClickProjeto(projeto)">{{projeto.titulo}}</li>
+      </ul>
+    </div>
+
+    <hr />
+
+    <div class="card">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item hand-over bg-default text-white" (click)="onClickCriarProjeto()" mdbWavesEffect>
+          <i class="fas fa-plus"></i> Criar novo projeto
+        </li>
       </ul>
     </div>
 
@@ -34,5 +50,44 @@
       </div>
     </div>
 
+  </div>
+
+  <!-- FORM -->
+  <div class="col-md-8" *ngIf="criarProjeto">
+    <form [formGroup]="frmProjeto" #formDir="ngForm" (submit)="onSubmit()">
+
+      <div class="card">
+        <div class="card-body">
+
+          <app-form-group>
+            <div class="md-form">
+              <input mdbInput type="text" id="titulo" class="form-control" formControlName="titulo" required>
+              <label for="titulo" class="required">Título</label>
+              <app-error-hint [refForm]="formDir" [refFormControl]="frmProjeto.get('titulo')"></app-error-hint>
+            </div>
+          </app-form-group>
+
+          <app-form-group>
+            <div class="md-form">
+              <textarea mdbInput id="descricao" class="md-textarea form-control" formControlName="descricao"></textarea>
+              <label for="descricao" class="required">Descrição</label>
+              <app-error-hint [refForm]="formDir" [refFormControl]="frmProjeto.get('descricao')"></app-error-hint>
+            </div>
+          </app-form-group>
+
+        </div>
+        <div class="card-footer">
+
+          <button mdbBtn mdbWavesEffect type="submit" size="sm" color="primary">
+            Salvar
+          </button>
+          <button mdbBtn mdbWavesEffect type="button" size="sm" color="primary" (click)="onCancelarProjeto()" outline="true">
+            Cancelar
+          </button>
+
+        </div>
+      </div>
+
+    </form>
   </div>
 </div>
