--- a/chronos-frontend/src/app/application/projetos/projetos.component.html
+++ b/chronos-frontend/src/app/application/projetos/projetos.component.html
@@ -35,9 +35,7 @@
       <div class="card-body">
         <h3>{{projetoSelecionado.titulo}}</h3>
         <hr />
-        <p class="card-text">
-          {{projetoSelecionado.descricao}}
-        </p>
+        <p class="card-text angular-with-newlines">{{projetoSelecionado.descricao}}</p>
         <hr />
         <em>Criado em {{projetoSelecionado.dtCriacao.toDate() | date:'dd/MM/yyyy'}}</em>
       </div>
