scroll para celular

--- a/chronos-frontend/src/app/application/projetos/projetos.component.html
+++ b/chronos-frontend/src/app/application/projetos/projetos.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <!-- DETAIL -->
-  <div class="col-md-8" *ngIf="projetoSelecionado && (!criarProjeto)">
+  <div class="col-md-8" *ngIf="projetoSelecionado && (!criarProjeto)" #divDetail>
 
     <div class="card">
       <div class="card-body">
